# sui-client-gen

./: .clippy.toml  .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  DOC.md  README.md  RELEASE-v0.5.0.md  justfile
generator/: CLAUDE.md  Cargo.toml
generator/framework/: env.ts  loader.ts  reified.ts  util.ts  vector.ts
generator/src/: driver.rs  framework_sources.rs  gen.rs  io.rs  layout.rs  lib.rs  main.rs  manifest.rs  model_builder.rs  multi_env.rs  package_cache.rs
generator/src/graphql/: cache.rs  client.rs  mod.rs  types.rs
generator/src/ts_gen/: builder.rs  compat.rs  doc_utils.rs  enums.rs  env_config.rs  format.rs  functions.rs  imports.rs  init.rs  jsdoc.rs  mod.rs  structs.rs  types.rs  utils.rs
generator/tests/: model_builder_integration.rs  multi_env_integration.rs  snapshot_tests.rs
generator/tests/fixtures/: .gitignore  gen_envs.toml
generator/tests/fixtures/PkgTransitiveLegacy/: Move.toml
generator/tests/fixtures/basic/: gen.toml
generator/tests/fixtures/basic/PkgToplevelLegacy/: Move.toml
generator/tests/fixtures/basic/pkg_published_toplevel/: Published.toml
generator/tests/fixtures/basic/pkg_unpublished_toplevel/sources/: main.move
generator/tests/fixtures/basic/pkg_unpublished_transitive/: Move.toml  Published.toml
generator/tests/fixtures/custom-env/: gen.toml
generator/tests/fixtures/custom-env/PkgToplevelLegacy/: Move.toml
generator/tests/fixtures/custom-env/PkgToplevelLegacy/sources/: lib.move
generator/tests/fixtures/custom-env/PkgTransitiveLegacy/: Move.toml
generator/tests/fixtures/custom-env/PkgTransitiveLegacy/sources/: lib.move
generator/tests/fixtures/custom-env/pkg_published_toplevel/: Move.toml
generator/tests/fixtures/custom-env/pkg_published_toplevel/sources/: main.move
generator/tests/fixtures/custom-env/pkg_published_transitive_alt/: Move.toml  Published.toml
generator/tests/fixtures/custom-env/pkg_published_transitive_alt/sources/: lib.move
generator/tests/fixtures/custom-env/pkg_unpublished_toplevel/: Move.toml
generator/tests/fixtures/custom-env/pkg_unpublished_transitive/: Move.toml
generator/tests/fixtures/custom-env/pkg_unpublished_transitive/sources/: lib.move
generator/tests/fixtures/multi_env_basic/dep_env_1/: Published.toml
generator/tests/fixtures/multi_env_basic/dep_env_1/sources/: lib.move
generator/tests/fixtures/multi_env_basic/dep_env_2/: Move.toml  Published.toml
generator/tests/fixtures/multi_env_basic/dep_env_2/sources/: lib.move
generator/tests/fixtures/multi_env_basic/root/: Published.toml
generator/tests/fixtures/multi_env_basic/root/sources/: main.move
generator/tests/fixtures/multi_env_fail/: gen.toml
generator/tests/fixtures/multi_env_fail/dep_env_1/: Move.toml
generator/tests/fixtures/multi_env_fail/dep_env_1/sources/: lib.move
generator/tests/fixtures/multi_env_fail/dep_env_2/sources/: lib.move
generator/tests/fixtures/multi_env_fail/root/: Move.toml
generator/tests/fixtures/pkg_published_toplevel/: Move.toml  Published.toml
generator/tests/fixtures/pkg_published_transitive/: Move.toml  Published.toml
generator/tests/fixtures/pkg_published_transitive/sources/: lib.move
generator/tests/fixtures/pkg_published_transitive_alt/: Move.toml
generator/tests/fixtures/pkg_unpublished_toplevel/: Move.toml
generator/tests/snapshots/: snapshot_tests__collision__same_name_different_packages.snap  snapshot_tests__enum__non_phantom_in_phantom_position.snap  snapshot_tests__enums__action.snap  snapshot_tests__enums__wrapped.snap  snapshot_tests__fixture__bar.snap  snapshot_tests__fixture__dummy.snap  snapshot_tests__fixture__foo.snap  snapshot_tests__fixture__with_generic_field.snap  snapshot_tests__fixture__with_special_types.snap  snapshot_tests__fixture__with_special_types_in_vectors.snap  snapshot_tests__fixture__with_two_generics.snap  snapshot_tests__function__create_bar.snap  snapshot_tests__function__create_special_in_vectors.snap  snapshot_tests__function__create_with_generic_field.snap  snapshot_tests__function__create_with_two_generics.snap  snapshot_tests__function__deprecated.snap  snapshot_tests__module__collision.snap  snapshot_tests__module__enum_non_phantom_in_phantom_position.snap  snapshot_tests__module__enums.snap  snapshot_tests__module__fixture_core.snap  snapshot_tests__module__fixture_functions.snap  snapshot_tests__module__fixture_special_types.snap  snapshot_tests__module__non_phantom_in_phantom_position.snap  snapshot_tests__module__with_phantom_type_args.snap  snapshot_tests__struct__doc_escaping.snap  snapshot_tests__struct__multiline_doc.snap  snapshot_tests__struct__non_phantom_in_phantom_position.snap  snapshot_tests__struct__single_line_doc.snap  snapshot_tests__struct__with_phantom_type_args.snap  snapshot_tests__system__enum_keeps_readonly.snap  snapshot_tests__system__struct_keeps_readonly.snap
ts/: .eslintrc.cjs  .prettierrc.json  .rustc_info.json  README.md  eslint-config-base.json  eslint.config.mjs  (+5 more)
(+44 files in other folders)
