[package]
name = "sui-client-gen"
version = "0.4.0"
edition = "2021"

[dependencies]
tokio = "1.46.1"
anyhow = "1.0.71"
futures = "0.3.28"
tempfile = "^3.20.0"
toml = { version = "0.5.8", features = ["preserve_order"] }
regex = "1.7.1"
clap = "4.4"
codespan-reporting = "0.11.1"
convert_case = "^0.6.0"
colored = "2.0.0"
indoc = "2"
serde = { version = "1.0.144", features = ["derive", "rc"] }
serde_json = { version = "1.0.95", features = ["preserve_order"] }
reqwest = { version = "0.12", features = ["json"] }
dprint-plugin-typescript = "0.95"
dprint-core = "0.67"

sui-move-build = { git = "https://github.com/MystenLabs/sui/", branch = "main"}
sui-move = { git = "https://github.com/MystenLabs/sui/", branch = "main"}
sui-package-management = { git = "https://github.com/MystenLabs/sui/", branch = "main"}
sui-sdk = { git = "https://github.com/MystenLabs/sui/", branch = "main"}
sui-json-rpc-types = { git = "https://github.com/MystenLabs/sui/", branch = "main"}
move-model-2 = { git = "https://github.com/MystenLabs/sui/", branch = "main"}
move-core-types = { git = "https://github.com/MystenLabs/sui/", branch = "main"}
move-binary-format = { git = "https://github.com/MystenLabs/sui/", branch = "main"}
move-symbol-pool = { git = "https://github.com/MystenLabs/sui/", branch = "main"}
move-bytecode-utils = { git = "https://github.com/MystenLabs/sui/", branch = "main"}
move-compiler = { git = "https://github.com/MystenLabs/sui/", branch = "main"}
move-package = { git = "https://github.com/MystenLabs/sui/", branch = "main"}
move-command-line-common = { git = "https://github.com/MystenLabs/sui/", branch = "main"}
move-package-alt = { git = "https://github.com/MystenLabs/sui/", branch = "main"}
move-package-alt-compilation = { git = "https://github.com/MystenLabs/sui/", branch = "main"}
sui-package-alt = { git = "https://github.com/MystenLabs/sui/", branch = "main"}

[dev-dependencies]
insta = { version = "1.41", features = ["glob"] }
